Global fix: ensure all components, index.html and assets are committed from root

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <meta property="og:url" content="https://nyc-atmosphere.vercel.app/" />
     <meta property="og:title" content="NYC | City of Dreams" />
     <meta property="og:description" content="Исследуйте атмосферу Нью-Йорка: от Таймс-сквер до уютных улочек Гринвич-Виллидж." />
-    <meta property="og:image" content="https://nyc-atmosphere.vercel.app/items/TimesSquare.JPG" />
+    <meta property="og:image" content="https://nyc-atmosphere.vercel.app/items/TimesSquare.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://nyc-atmosphere.vercel.app/" />
     <meta property="twitter:title" content="NYC | City of Dreams" />
     <meta property="twitter:description" content="Исследуйте атмосферу Нью-Йорка: от Таймс-сквер до уютных улочек Гринвич-Виллидж." />
-    <meta property="twitter:image" content="https://nyc-atmosphere.vercel.app/items/TimesSquare.JPG" />
+    <meta property="twitter:image" content="https://nyc-atmosphere.vercel.app/items/TimesSquare.webp" />
+
+    <!-- Preload Critical Assets -->
+    <link rel="preload" as="image" href="/items/TimesSquare.webp" />
+    <link rel="preload" as="video" href="/items/Herovideo.webm" />
 
     <!-- JSON-LD -->
     <script type="application/ld+json">
