Performance: Ultra-compression of videos, AVIF preloading, and image resizing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="twitter:image" content="https://nyc-atmosphere.vercel.app/items/TimesSquare.webp" />
 
     <!-- Preload Critical Assets -->
-    <link rel="preload" as="image" href="/items/TimesSquare.webp" fetchpriority="high" />
+    <link rel="preload" as="image" href="/items/TimesSquare.avif" fetchpriority="high" />
 
     <!-- JSON-LD -->
     <script type="application/ld+json">
